--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,2 +1,13 @@
-node_modules
 .env
+
+# node_modules
+node_modules
+
+# logs
+logs
+
+# coverage
+coverage                        
+
+.cursorrrules
+
